--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,33 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Hello React!</title>
+
+        <!-- Place this data between the <head> tags of your website -->
+        <title>Crypto Converter</title>
+        <meta name="description" content="Simple crypto assets converter." />
+
+        <!-- Schema.org markup for Google+ -->
+        <meta itemprop="name" content="Crypto Converter">
+        <meta itemprop="description" content="Simple crypto assets converter.">
+        <meta itemprop="image" content="https://image.ibb.co/jXz6QH/crypto_convert.png">
+
+        <!-- Twitter Card data -->
+        <meta name="twitter:card" content="product">
+        <meta name="twitter:site" content="@publisher_handle">
+        <meta name="twitter:title" content="Crypto Converter">
+        <meta name="twitter:description" content="Simple crypto assets converter.">
+        <meta name="twitter:creator" content="@blockTalks">
+        <meta name="twitter:image" content="https://image.ibb.co/jXz6QH/crypto_convert.png">
+        <meta name="twitter:data2" content="Black">
+        <meta name="twitter:label2" content="Color">
+
+        <!-- Open Graph data -->
+        <meta property="og:title" content="Crypto Converter" />
+        <meta property="og:type" content="application" />
+        <meta property="og:url" content="https://crypto-convert.herokuapp.com/" />
+        <meta property="og:image" content="https://image.ibb.co/jXz6QH/crypto_convert.png" />
+        <meta property="og:description" content="Simple crypto assets converter." />
+        <meta property="og:site_name" content="Crypto converter" />
     </head>
     <body>
         <div id="root"></div>
