add twitter image

--- a/ui/index.html
+++ b/ui/index.html
@@ -30,6 +30,13 @@
         <meta property="og:image" content="https://image.ibb.co/jXz6QH/crypto_convert.png" />
         <meta property="og:description" content="Simple crypto assets converter." />
         <meta property="og:site_name" content="Crypto converter" />
+
+        <meta name="twitter:card" content="Simple crypto assets converter." />
+        <meta name="twitter:site" content="@blocktalks" />
+        <meta name="twitter:title" content="Crypto Converter" />
+        <meta name="twitter:description" content="Simple crypto assets converter." />
+        <meta name="twitter:image" content="https://image.ibb.co/jXz6QH/crypto_convert.png" />
+
     </head>
     <body>
         <div id="root"></div>
